2011-11-03  Andreas Schwab  <schwab@redhat.com>

	* nss/makedb.c (set_file_creation_context): Do nothing if SELinux
	is disabled.

2011-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* bits/ioctl-types.h (_IOT_sgttyb): Set number of chars to 4.

2011-11-01  Andreas Schwab  <schwab@linux-m68k.org>

	* include/alloca.h (stackinfo_alloca_round): Define.
	(extend_alloca): Use it.
	[_STACK_GROWS_UP]: Correct check for adjacent allocation.
	* elf/dl-deps.c (_dl_map_object_deps): Don't round alloca size
	here.

	* scripts/check-local-headers.sh: Ignore libaudit.h.

	* nscd/Makefile (extra-objs): Make recursively expanded.

2011-11-01  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/strcmp.S: Fix test for non-ASCII locales.
	* sysdeps/x86_64/multiarch/strcmp-sse42.S: Likewise.

	* posix/tst-rfc3484.c: Add missing __free_in6ai dummy function.
	* posix/tst-rfc3484-2.c: Likewise.
	* posix/tst-rfc3484-3.c: Likewise.

	* sysdeps/unix/sysv/linux/bits/uio.h: Declare process_vm_readv and
	process_vm_writev.
	* sysdeps/unix/sysv/linux/syscalls.list: Add process_vm_readv and
	process_vm_writev.
	* sysdeps/unix/sysv/linux/Versions: Export process_vm_readv and
	process_vm_writev from libc using GLIBC_2.15 version.

	* nscd/connections.c: Use kernel headers instead of <netlink/netlink.h>.

2011-10-31  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* elf/dl-deps.c (_dl_map_object_deps): Reuse alloca space to reduce
	stack usage.

2011-10-31  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13367]
	* nss/getent.c (initgroups_keys): Show error message in case no group
	names are given.

	* include/ifaddrs.h: Declare __free_in6ai and __bump_nl_timestamp.
	* inet/check_pf.c: Provide dummy versions of __free_in6ai and
	__bump_nl_timestamp.
	* nscd/connections (nscd_init): When host database is served open
	netlink socket and request notification about configuration changes.
	(main_loop_poll): Track netlink file descriptor and bump timestamp
	in case data becomes available.